--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
   {
-    "short_name": "DOB Finder",
-    "name": "Date of Birth Finder",
+    "short_name": "The Cloud Context",
+    "name": "The Cloud Context",
     "description": "description or purpose of your progressive web app",
     "lang": "en-US",
     "icons": [
