--- a/manifest.json
+++ b/manifest.json
@@ -49,6 +49,6 @@
     "background_color": "#3367D6",
     "display": "standalone",
     "orientation":"portrait",
-    "theme_color": "#fff",
+    "theme_color": "#257AE9",
     "start_url": "index.html?launcher=true"
   }
